@@ -1,3 +1,5 @@
+m4_include([../config/acx.m4])
+m4_include([../lt~obsolete.m4])
 m4_include([../config/libelf.m4])
 m4_include([../ltsugar.m4])
 m4_include([../ltoptions.m4])
