@@ -5,5 +5,6 @@ AM_INIT_AUTOMAKE([foreign])
 AC_PROG_CC
 AC_CHECK_GELF
 AM_PROG_LIBTOOL
+AC_SUBST(target_noncanonical)
 AC_CONFIG_FILES(Makefile)
 AC_OUTPUT
